# termsandtruthconditions

./: .envrc  .gitignore  .tmuxinator.yml  Gemfile  README.md  _config.yml  about.md  archive.html  archive.md  blog.cabal  blog.nix  default.nix  deploy.sh  gemset.nix  haskell.nix  index.html  shell.nix  update-gems.sh
_data/: links.yml  navigation.yml
_drafts/: consequentialist_moral_character.md  elementary-programming.md  encryption-and-the-waterfall-problem.md  everything-i-know-about-designing-programming-languages.md  false-consciousness.md  lenses-for-tree-traversals.md  lsp-architecture-1.md  lsp-good-bad-ugly.md  murder-at-the-merger.md  nihilism.md  packages-and-petnames.md  post-consequentialist-agents.md  steps-to-despair.md  the-giants-abyss.md  the-second-sex.md  the-value-of-truth.markdown  towards-effective-entrepreneurship.md  types-and-the-extended-mind.md  what-is-the-point-of-blockchain.md  your-orphans-are-fine.md
_includes/: archive_list.html  disqus.html  fonts.html  footer.html  footer_content.html  head.html  head_custom.html  header.html  mathjax.hml  post_header.html
_layouts/: blog_archive.html  default.html  home.html  page.html  post.html  type_archive.html
_posts/: 2012-10-09-introduction.markdown  2012-10-23-first-day-at-work.markdown  2012-10-28-sculptures-by-the-sea.markdown  2012-11-01-estimating-the-effectiveness-of-dcp-1.markdown  2012-11-04-estimating-the-effectiveness-of-dcp-2.markdown  2012-11-04-syncing-dotfiles-with-git.markdown  2012-12-29-australia-update-2.markdown  2013-02-18-slides-for-covariance.markdown  (+60 more)
(+27 files in other folders)
