cabal-version: 2.2
name: blog
version: 0.1.0.0
license: MIT
maintainer: me@michaelpj.com
author: Michael Peyton Jones
synopsis: Blog
description: Blog
build-type: Simple

library
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -pgmL markdown-unlit -Wall
    exposed-modules:
      LensesForTreeTraversals
      LensesForTreeTraversalsRedux
    build-tool-depends: markdown-unlit:markdown-unlit
    build-depends:
        base >=4.9 && <5,
        containers -any,
        data-fix -any,
        recursion-schemes -any,
        lens -any,
        mtl -any,
        multiset -any,
        transformers -any
